Revision history for App-MHFS, note the CHANGELOG.md of the repository is much more comprehensive
v0.4.1  2022-07-15
        Attempt to fix cpantesters issues, require perl 5.14.0 or greater, test Time::HiRes::clock_gettime in
        Makefile.PL for OS check, make integer size, a MHFS::Plugin::GetVideo plugin loading error instead of a
        compile time error for MHFS.

v0.4.0  2022-07-11
        Bump version for MHFS release.

v0.3.0  2022-06-30
        First packaged version, released on an unsuspecting world.
