@@ -1,4 +1,8 @@
 Revision history for App-MHFS, note the CHANGELOG.md of the repository is much more comprehensive
+vX.X.X  XXXX-XX-XX
+        use compile time eval for proper `use` error handling in Makefile.PL. Move MHFS::EventLoop::Poll::Linux
+        archname requirement to MHFS::EventLoop::Poll::Linux::Timer.
+
 v0.4.1  2022-07-15
         Attempt to fix cpantesters issues, require perl 5.14.0 or greater, test Time::HiRes::clock_gettime in
         Makefile.PL for OS check, make integer size, a MHFS::Plugin::GetVideo plugin loading error instead of a
